--- a/config/deployment/metadata.html
+++ b/config/deployment/metadata.html
@@ -82,7 +82,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="../../index.html"><strong aria-hidden="true">1.</strong> Introduction</a></li><li class="chapter-item expanded "><a href="../../cli/index.html"><strong aria-hidden="true">2.</strong> Command Line Tool</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../cli/create.html"><strong aria-hidden="true">2.1.</strong> create</a></li><li class="chapter-item expanded "><a href="../../cli/import.html"><strong aria-hidden="true">2.2.</strong> import</a></li><li class="chapter-item expanded "><a href="../../cli/apply.html"><strong aria-hidden="true">2.3.</strong> apply</a></li><li class="chapter-item expanded "><a href="../../cli/version.html"><strong aria-hidden="true">2.4.</strong> version</a></li><li class="chapter-item expanded "><a href="../../cli/options.html"><strong aria-hidden="true">2.5.</strong> options</a></li></ol></li><li class="chapter-item expanded "><a href="../../config/index.html"><strong aria-hidden="true">3.</strong> YAML Config file </a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../config/deployment/index.html"><strong aria-hidden="true">3.1.</strong> Deployment.md</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../config/deployment/metadata.html" class="active"><strong aria-hidden="true">3.1.1.</strong> Metadata</a></li><li class="chapter-item expanded "><a href="../../config/deployment/spec.html"><strong aria-hidden="true">3.1.2.</strong> Spec</a></li><li class="chapter-item expanded "><a href="../../config/deployment/containers.html"><strong aria-hidden="true">3.1.3.</strong> Containers</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../config/deployment/health-check.html"><strong aria-hidden="true">3.1.3.1.</strong> Health Check</a></li><li class="chapter-item expanded "><a href="../../config/deployment/resources.html"><strong aria-hidden="true">3.1.3.2.</strong> Resources</a></li><li class="chapter-item expanded "><a href="../../config/deployment/env.html"><strong aria-hidden="true">3.1.3.3.</strong> Env and Config</a></li><li class="chapter-item expanded "><a href="../../config/deployment/volume.html"><strong aria-hidden="true">3.1.3.4.</strong> Volume</a></li></ol></li></ol></li><li class="chapter-item expanded "><a href="../../config/service/index.html"><strong aria-hidden="true">3.2.</strong> Service</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../config/service/metadata.html"><strong aria-hidden="true">3.2.1.</strong> Metadata</a></li><li class="chapter-item expanded "><a href="../../config/service/spec.html"><strong aria-hidden="true">3.2.2.</strong> Spec</a></li></ol></li></ol></li><li class="chapter-item expanded "><a href="../../architecture.html"><strong aria-hidden="true">4.</strong> Architecture</a></li><li class="chapter-item expanded "><a href="../../ci/index.html"><strong aria-hidden="true">5.</strong> Github Actions CI</a></li><li class="chapter-item expanded "><a href="../../CHANGELOG/CHANGELOG.html"><strong aria-hidden="true">6.</strong> CHANGELOG</a></li><li class="spacer"></li><li class="chapter-item expanded affix "><a href="../../who-uses-this.html">Who uses this?</a></li><li class="chapter-item expanded affix "><a href="../../CONTRIBUTING.html">CONTRIBUTING</a></li></ol>            </div>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="../../index.html"><strong aria-hidden="true">1.</strong> Introduction</a></li><li class="chapter-item expanded "><a href="../../cli/index.html"><strong aria-hidden="true">2.</strong> Command Line Tool</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../cli/create.html"><strong aria-hidden="true">2.1.</strong> create</a></li><li class="chapter-item expanded "><a href="../../cli/import.html"><strong aria-hidden="true">2.2.</strong> import</a></li><li class="chapter-item expanded "><a href="../../cli/apply.html"><strong aria-hidden="true">2.3.</strong> apply</a></li><li class="chapter-item expanded "><a href="../../cli/version.html"><strong aria-hidden="true">2.4.</strong> version</a></li><li class="chapter-item expanded "><a href="../../cli/options.html"><strong aria-hidden="true">2.5.</strong> options</a></li></ol></li><li class="chapter-item expanded "><a href="../../config/index.html"><strong aria-hidden="true">3.</strong> YAML Config file </a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../config/deployment/index.html"><strong aria-hidden="true">3.1.</strong> Deployment</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../config/deployment/metadata.html" class="active"><strong aria-hidden="true">3.1.1.</strong> Metadata</a></li><li class="chapter-item expanded "><a href="../../config/deployment/spec.html"><strong aria-hidden="true">3.1.2.</strong> Spec</a></li><li class="chapter-item expanded "><a href="../../config/deployment/containers.html"><strong aria-hidden="true">3.1.3.</strong> Containers</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../config/deployment/health-check.html"><strong aria-hidden="true">3.1.3.1.</strong> Health Check</a></li><li class="chapter-item expanded "><a href="../../config/deployment/resources.html"><strong aria-hidden="true">3.1.3.2.</strong> Resources</a></li><li class="chapter-item expanded "><a href="../../config/deployment/env.html"><strong aria-hidden="true">3.1.3.3.</strong> Env and Config</a></li><li class="chapter-item expanded "><a href="../../config/deployment/volume.html"><strong aria-hidden="true">3.1.3.4.</strong> Volume</a></li></ol></li></ol></li><li class="chapter-item expanded "><a href="../../config/service/index.html"><strong aria-hidden="true">3.2.</strong> Service</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../config/service/metadata.html"><strong aria-hidden="true">3.2.1.</strong> Metadata</a></li><li class="chapter-item expanded "><a href="../../config/service/spec.html"><strong aria-hidden="true">3.2.2.</strong> Spec</a></li></ol></li></ol></li><li class="chapter-item expanded "><a href="../../architecture.html"><strong aria-hidden="true">4.</strong> Architecture</a></li><li class="chapter-item expanded "><a href="../../ci/index.html"><strong aria-hidden="true">5.</strong> Github Actions CI</a></li><li class="chapter-item expanded "><a href="../../CHANGELOG/CHANGELOG.html"><strong aria-hidden="true">6.</strong> CHANGELOG</a></li><li class="spacer"></li><li class="chapter-item expanded affix "><a href="../../who-uses-this.html">Who uses this?</a></li><li class="chapter-item expanded affix "><a href="../../CONTRIBUTING.html">CONTRIBUTING</a></li></ol>            </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
 
@@ -143,14 +143,52 @@
 
                 <div id="content" class="content">
                     <main>
-                        <p>name: &quot;nginx&quot;
-labels:
-app: nginx
-run: nginx
-annotations:
-app: nginx
-nginx.master: &quot;true&quot;</p>
-<h1 id="coming-soon"><a class="header" href="#coming-soon">Coming Soon...</a></h1>
+                        <h1 id="metadata"><a class="header" href="#metadata">Metadata</a></h1>
+<p>This is metadata about the resource, such as its name, type, api version, annotations, and labels. This contains fields that maybe updated both by the end user and the system (e.g. annotations, labels and so on).</p>
+<h2 id="example-of-metadata"><a class="header" href="#example-of-metadata">Example of Metadata</a></h2>
+<pre><code class="language-yaml">deployment:
+  name: &quot;nginx&quot;
+  labels:
+    app: nginx
+    run: nginx
+  annotations:
+    app: nginx
+    nginx.master: &quot;true&quot;
+</code></pre>
+<h3 id="configuration"><a class="header" href="#configuration">Configuration</a></h3>
+<p>The following tables list the configurable parameters of the <code>metadata</code> chart and their default values.</p>
+<table><thead><tr><th>Parameter</th><th>Type</th><th>Description</th><th>Default</th></tr></thead><tbody>
+<tr><td><code>levis.name</code></td><td>String</td><td>To name the deployment and service</td><td><code>undefined</code></td></tr>
+<tr><td><code>deployment.name</code></td><td>String</td><td>To name the deployment</td><td><code>inherit from levis.name</code></td></tr>
+<tr><td><code>deployment.labels</code></td><td>String : String</td><td>To define deployment labels</td><td><code>{}</code></td></tr>
+<tr><td><code>deployment.annotations</code></td><td>String : String</td><td>To define deployment annotations</td><td><code>{}</code></td></tr>
+</tbody></table>
+<h2 id="labels"><a class="header" href="#labels">Labels</a></h2>
+<p>You can visualize and manage Kubernetes objects with more tools than kubectl and the dashboard. A common set of labels allows tools to work interoperably, describing objects in a common manner that all tools can understand. </p>
+<h3 id="example"><a class="header" href="#example">Example</a></h3>
+<pre><code class="language-yaml">deployment:
+  labels:
+    app.kubernetes.io/name: &quot;nginx&quot;
+    app.kubernetes.io/instance: &quot;nginx-01&quot;
+    app.kubernetes.io/version: &quot;1.1.0-stable&quot;
+    app.kubernetes.io/component: &quot;reverse-proxy&quot;
+    app.kubernetes.io/part-of: &quot;api-gateway&quot;
+    app.kubernetes.io/managed-by: &quot;levis&quot;
+    app.kubernetes.io/created-by: &quot;controller-manager&quot;
+</code></pre>
+<h2 id="annotations"><a class="header" href="#annotations">Annotations</a></h2>
+<p>You can use Kubernetes annotations to attach arbitrary non-identifying metadata to objects. Clients such as tools and libraries can retrieve this metadata.</p>
+<h3 id="example-1"><a class="header" href="#example-1">Example</a></h3>
+<pre><code class="language-yaml">deployment:
+  annotations:
+    registry: &quot;https://hub.docker.com/&quot;
+    credential: &quot;secret-manager&quot;
+</code></pre>
+<p>references: </p>
+<ul>
+<li><a href="https://kubernetes.io/docs/concepts/overview/working-with-objects/common-labels/">Recommended Labels</a> </li>
+<li><a href="https://kubernetes.io/docs/concepts/overview/working-with-objects/annotations/">Annotations</a></li>
+</ul>
 
                     </main>
 
