--- a/config/index.html
+++ b/config/index.html
@@ -82,7 +82,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="../index.html"><strong aria-hidden="true">1.</strong> Introduction</a></li><li class="chapter-item expanded "><a href="../cli/index.html"><strong aria-hidden="true">2.</strong> Command Line Tool</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../cli/create.html"><strong aria-hidden="true">2.1.</strong> create</a></li><li class="chapter-item expanded "><a href="../cli/import.html"><strong aria-hidden="true">2.2.</strong> import</a></li><li class="chapter-item expanded "><a href="../cli/apply.html"><strong aria-hidden="true">2.3.</strong> apply</a></li><li class="chapter-item expanded "><a href="../cli/version.html"><strong aria-hidden="true">2.4.</strong> version</a></li><li class="chapter-item expanded "><a href="../cli/options.html"><strong aria-hidden="true">2.5.</strong> options</a></li></ol></li><li class="chapter-item expanded "><a href="../config/index.html" class="active"><strong aria-hidden="true">3.</strong> YAML Config file </a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../config/deployment/index.html"><strong aria-hidden="true">3.1.</strong> Deployment.md</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../config/deployment/metadata.html"><strong aria-hidden="true">3.1.1.</strong> Metadata</a></li><li class="chapter-item expanded "><a href="../config/deployment/spec.html"><strong aria-hidden="true">3.1.2.</strong> Spec</a></li><li class="chapter-item expanded "><a href="../config/deployment/containers.html"><strong aria-hidden="true">3.1.3.</strong> Containers</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../config/deployment/health-check.html"><strong aria-hidden="true">3.1.3.1.</strong> Health Check</a></li><li class="chapter-item expanded "><a href="../config/deployment/resources.html"><strong aria-hidden="true">3.1.3.2.</strong> Resources</a></li><li class="chapter-item expanded "><a href="../config/deployment/env.html"><strong aria-hidden="true">3.1.3.3.</strong> Env and Config</a></li><li class="chapter-item expanded "><a href="../config/deployment/volume.html"><strong aria-hidden="true">3.1.3.4.</strong> Volume</a></li></ol></li></ol></li><li class="chapter-item expanded "><a href="../config/service/index.html"><strong aria-hidden="true">3.2.</strong> Service</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../config/service/metadata.html"><strong aria-hidden="true">3.2.1.</strong> Metadata</a></li><li class="chapter-item expanded "><a href="../config/service/spec.html"><strong aria-hidden="true">3.2.2.</strong> Spec</a></li></ol></li></ol></li><li class="chapter-item expanded "><a href="../architecture.html"><strong aria-hidden="true">4.</strong> Architecture</a></li><li class="chapter-item expanded "><a href="../ci/index.html"><strong aria-hidden="true">5.</strong> Github Actions CI</a></li><li class="chapter-item expanded "><a href="../CHANGELOG/CHANGELOG.html"><strong aria-hidden="true">6.</strong> CHANGELOG</a></li><li class="spacer"></li><li class="chapter-item expanded affix "><a href="../who-uses-this.html">Who uses this?</a></li><li class="chapter-item expanded affix "><a href="../CONTRIBUTING.html">CONTRIBUTING</a></li></ol>            </div>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="../index.html"><strong aria-hidden="true">1.</strong> Introduction</a></li><li class="chapter-item expanded "><a href="../cli/index.html"><strong aria-hidden="true">2.</strong> Command Line Tool</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../cli/create.html"><strong aria-hidden="true">2.1.</strong> create</a></li><li class="chapter-item expanded "><a href="../cli/import.html"><strong aria-hidden="true">2.2.</strong> import</a></li><li class="chapter-item expanded "><a href="../cli/apply.html"><strong aria-hidden="true">2.3.</strong> apply</a></li><li class="chapter-item expanded "><a href="../cli/version.html"><strong aria-hidden="true">2.4.</strong> version</a></li><li class="chapter-item expanded "><a href="../cli/options.html"><strong aria-hidden="true">2.5.</strong> options</a></li></ol></li><li class="chapter-item expanded "><a href="../config/index.html" class="active"><strong aria-hidden="true">3.</strong> YAML Config file </a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../config/deployment/index.html"><strong aria-hidden="true">3.1.</strong> Deployment</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../config/deployment/metadata.html"><strong aria-hidden="true">3.1.1.</strong> Metadata</a></li><li class="chapter-item expanded "><a href="../config/deployment/spec.html"><strong aria-hidden="true">3.1.2.</strong> Spec</a></li><li class="chapter-item expanded "><a href="../config/deployment/containers.html"><strong aria-hidden="true">3.1.3.</strong> Containers</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../config/deployment/health-check.html"><strong aria-hidden="true">3.1.3.1.</strong> Health Check</a></li><li class="chapter-item expanded "><a href="../config/deployment/resources.html"><strong aria-hidden="true">3.1.3.2.</strong> Resources</a></li><li class="chapter-item expanded "><a href="../config/deployment/env.html"><strong aria-hidden="true">3.1.3.3.</strong> Env and Config</a></li><li class="chapter-item expanded "><a href="../config/deployment/volume.html"><strong aria-hidden="true">3.1.3.4.</strong> Volume</a></li></ol></li></ol></li><li class="chapter-item expanded "><a href="../config/service/index.html"><strong aria-hidden="true">3.2.</strong> Service</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../config/service/metadata.html"><strong aria-hidden="true">3.2.1.</strong> Metadata</a></li><li class="chapter-item expanded "><a href="../config/service/spec.html"><strong aria-hidden="true">3.2.2.</strong> Spec</a></li></ol></li></ol></li><li class="chapter-item expanded "><a href="../architecture.html"><strong aria-hidden="true">4.</strong> Architecture</a></li><li class="chapter-item expanded "><a href="../ci/index.html"><strong aria-hidden="true">5.</strong> Github Actions CI</a></li><li class="chapter-item expanded "><a href="../CHANGELOG/CHANGELOG.html"><strong aria-hidden="true">6.</strong> CHANGELOG</a></li><li class="spacer"></li><li class="chapter-item expanded affix "><a href="../who-uses-this.html">Who uses this?</a></li><li class="chapter-item expanded affix "><a href="../CONTRIBUTING.html">CONTRIBUTING</a></li></ol>            </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
 
@@ -143,7 +143,84 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="coming-soon"><a class="header" href="#coming-soon">Coming Soon...</a></h1>
+                        <h1 id="yaml-config-file-schema"><a class="header" href="#yaml-config-file-schema">YAML Config file schema</a></h1>
+<p>Use <code>levis create -f &lt;levis-config-file&gt;.yaml</code> schema to generate Kubernetes Component Syntax</p>
+<h2 id="levis-config-file-syntax-example"><a class="header" href="#levis-config-file-syntax-example">Levis Config file Syntax Example</a></h2>
+<p>This is an example levis config</p>
+<pre><code class="language-yaml">levis:
+  name: &quot;nginx&quot;
+  namespace: &quot;kubeops&quot;
+  deployment:
+    name: &quot;nginx&quot;
+    labels:
+      app: nginx
+      run: nginx
+    annotations:
+      app: nginx
+      nginx.master: &quot;true&quot;
+    serviceAccount: microservice
+    revisionHistoryLimit: 5
+    replicas: 3
+    strategy: 
+      type: RollingUpdate
+      rollingUpdate:
+        maxSurge: &quot;80%&quot;
+        maxUnavailable: &quot;20%&quot;
+    matchLabels:
+      app: nginx
+      run: nginx
+    containers:
+      name: &quot;nginx&quot;
+      image: &quot;nginx&quot;
+      imagePullPolicy: Always
+      port: 8080
+      env:
+        app: nginx
+      envField:
+        - KEY: &quot;value&quot;
+          AGENT_HOST: &quot;status.hostIP&quot;
+        - apiVersion: v2
+          HOST_NAME: 
+      configEnvName: &quot;appsettings&quot;
+      secretEnvName: &quot;secretappsettings&quot;
+      resources:
+        requests:
+          memory: &quot;64Mi&quot;
+          cpu: &quot;250m&quot;
+        limits:
+          memory: &quot;128Mi&quot;
+          cpu: &quot;500m&quot;
+      livenessProbe:
+        path: /actuator/health/liveness
+        port: &quot;8080&quot;
+        initialDelaySeconds: 30
+        periodSeconds: 10
+        successThreshold: 10
+        failureThreshold: 10
+        timeoutSeconds: 10
+      readinessProbe:
+        path: /actuator/health/readiness
+        port: &quot;8080&quot;
+        initialDelaySeconds: 30
+        periodSeconds: 10
+        successThreshold: 10
+        failureThreshold: 10
+        timeoutSeconds: 10
+  service:
+    name: &quot;nginx&quot;
+    labels:
+      app: nginx
+    annotations:
+      app: nginx
+    selector:
+      app: nginx
+    type: ClusterIP
+    ports:
+      name: &quot;nginx&quot;
+      port: 80
+      targetPort: 80
+</code></pre>
+<p>For more information, you can follow levis syntax example from this <a href="https://github.com/kubeopsskills/levis/tree/develop/examples">link</a></p>
 
                     </main>
 
