--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="index.html" class="active"><strong aria-hidden="true">1.</strong> Introduction</a></li><li class="chapter-item expanded "><a href="cli/index.html"><strong aria-hidden="true">2.</strong> Command Line Tool</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="cli/create.html"><strong aria-hidden="true">2.1.</strong> create</a></li><li class="chapter-item expanded "><a href="cli/import.html"><strong aria-hidden="true">2.2.</strong> import</a></li><li class="chapter-item expanded "><a href="cli/apply.html"><strong aria-hidden="true">2.3.</strong> apply</a></li><li class="chapter-item expanded "><a href="cli/version.html"><strong aria-hidden="true">2.4.</strong> version</a></li><li class="chapter-item expanded "><a href="cli/options.html"><strong aria-hidden="true">2.5.</strong> options</a></li></ol></li><li class="chapter-item expanded "><a href="config/index.html"><strong aria-hidden="true">3.</strong> YAML Config file </a></li><li><ol class="section"><li class="chapter-item expanded "><a href="config/deployment/index.html"><strong aria-hidden="true">3.1.</strong> Deployment.md</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="config/deployment/metadata.html"><strong aria-hidden="true">3.1.1.</strong> Metadata</a></li><li class="chapter-item expanded "><a href="config/deployment/spec.html"><strong aria-hidden="true">3.1.2.</strong> Spec</a></li><li class="chapter-item expanded "><a href="config/deployment/containers.html"><strong aria-hidden="true">3.1.3.</strong> Containers</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="config/deployment/health-check.html"><strong aria-hidden="true">3.1.3.1.</strong> Health Check</a></li><li class="chapter-item expanded "><a href="config/deployment/resources.html"><strong aria-hidden="true">3.1.3.2.</strong> Resources</a></li><li class="chapter-item expanded "><a href="config/deployment/env.html"><strong aria-hidden="true">3.1.3.3.</strong> Env and Config</a></li><li class="chapter-item expanded "><a href="config/deployment/volume.html"><strong aria-hidden="true">3.1.3.4.</strong> Volume</a></li></ol></li></ol></li><li class="chapter-item expanded "><a href="config/service/index.html"><strong aria-hidden="true">3.2.</strong> Service</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="config/service/metadata.html"><strong aria-hidden="true">3.2.1.</strong> Metadata</a></li><li class="chapter-item expanded "><a href="config/service/spec.html"><strong aria-hidden="true">3.2.2.</strong> Spec</a></li></ol></li></ol></li><li class="chapter-item expanded "><a href="architecture.html"><strong aria-hidden="true">4.</strong> Architecture</a></li><li class="chapter-item expanded "><a href="ci/index.html"><strong aria-hidden="true">5.</strong> Github Actions CI</a></li><li class="chapter-item expanded "><a href="CHANGELOG/CHANGELOG.html"><strong aria-hidden="true">6.</strong> CHANGELOG</a></li><li class="spacer"></li><li class="chapter-item expanded affix "><a href="who-uses-this.html">Who uses this?</a></li><li class="chapter-item expanded affix "><a href="CONTRIBUTING.html">CONTRIBUTING</a></li></ol>            </div>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="index.html" class="active"><strong aria-hidden="true">1.</strong> Introduction</a></li><li class="chapter-item expanded "><a href="cli/index.html"><strong aria-hidden="true">2.</strong> Command Line Tool</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="cli/create.html"><strong aria-hidden="true">2.1.</strong> create</a></li><li class="chapter-item expanded "><a href="cli/import.html"><strong aria-hidden="true">2.2.</strong> import</a></li><li class="chapter-item expanded "><a href="cli/apply.html"><strong aria-hidden="true">2.3.</strong> apply</a></li><li class="chapter-item expanded "><a href="cli/version.html"><strong aria-hidden="true">2.4.</strong> version</a></li><li class="chapter-item expanded "><a href="cli/options.html"><strong aria-hidden="true">2.5.</strong> options</a></li></ol></li><li class="chapter-item expanded "><a href="config/index.html"><strong aria-hidden="true">3.</strong> YAML Config file </a></li><li><ol class="section"><li class="chapter-item expanded "><a href="config/deployment/index.html"><strong aria-hidden="true">3.1.</strong> Deployment</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="config/deployment/metadata.html"><strong aria-hidden="true">3.1.1.</strong> Metadata</a></li><li class="chapter-item expanded "><a href="config/deployment/spec.html"><strong aria-hidden="true">3.1.2.</strong> Spec</a></li><li class="chapter-item expanded "><a href="config/deployment/containers.html"><strong aria-hidden="true">3.1.3.</strong> Containers</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="config/deployment/health-check.html"><strong aria-hidden="true">3.1.3.1.</strong> Health Check</a></li><li class="chapter-item expanded "><a href="config/deployment/resources.html"><strong aria-hidden="true">3.1.3.2.</strong> Resources</a></li><li class="chapter-item expanded "><a href="config/deployment/env.html"><strong aria-hidden="true">3.1.3.3.</strong> Env and Config</a></li><li class="chapter-item expanded "><a href="config/deployment/volume.html"><strong aria-hidden="true">3.1.3.4.</strong> Volume</a></li></ol></li></ol></li><li class="chapter-item expanded "><a href="config/service/index.html"><strong aria-hidden="true">3.2.</strong> Service</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="config/service/metadata.html"><strong aria-hidden="true">3.2.1.</strong> Metadata</a></li><li class="chapter-item expanded "><a href="config/service/spec.html"><strong aria-hidden="true">3.2.2.</strong> Spec</a></li></ol></li></ol></li><li class="chapter-item expanded "><a href="architecture.html"><strong aria-hidden="true">4.</strong> Architecture</a></li><li class="chapter-item expanded "><a href="ci/index.html"><strong aria-hidden="true">5.</strong> Github Actions CI</a></li><li class="chapter-item expanded "><a href="CHANGELOG/CHANGELOG.html"><strong aria-hidden="true">6.</strong> CHANGELOG</a></li><li class="spacer"></li><li class="chapter-item expanded affix "><a href="who-uses-this.html">Who uses this?</a></li><li class="chapter-item expanded affix "><a href="CONTRIBUTING.html">CONTRIBUTING</a></li></ol>            </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
 
@@ -144,36 +144,23 @@
                 <div id="content" class="content">
                     <main>
                         <h1 id="levis"><a class="header" href="#levis">Levis</a></h1>
-<h2 id="kubernetes-manifest-generator-with-nodejs-14"><a class="header" href="#kubernetes-manifest-generator-with-nodejs-14">Kubernetes Manifest Generator (with node.js 14)</a></h2>
+<h2 id="kubernetes-manifest-generator"><a class="header" href="#kubernetes-manifest-generator">Kubernetes Manifest Generator</a></h2>
 <p><strong>Levis</strong> is Kubernetes Manifest Generator for simply creating Kubernetes applications. Levis generates pure Kubernetes YAML - you can use Levis to define Kubernetes applications with YAML syntax for any Kubernetes clusters running anywhere.</p>
 <p>This is an project built with ❤️ by <a href="https://www.kubeops.guru">KubeOps Skills</a>. We encourage you to <a href="#getting-started">try it out</a>, <a href="#help--feedback">leave feedback</a>, and <a href="#contributing">jump in to help</a>!</p>
 <h3 id="contents"><a class="header" href="#contents">Contents</a></h3>
 <ul>
-<li><a href="#levis">Levis</a>
-<ul>
-<li><a href="#kubernetes-manifest-generator-with-nodejs-14">Kubernetes Manifest Generator (with node.js 14)</a>
-<ul>
-<li><a href="#contents">Contents</a></li>
-</ul>
-</li>
 <li><a href="#versioning">Versioning</a></li>
 <li><a href="#demo">Demo</a></li>
-<li><a href="#getting-started">Getting Started</a>
-<ul>
-<li><a href="#installation">Installation</a></li>
-</ul>
-</li>
+<li><a href="#getting-started">Getting Started</a></li>
 <li><a href="#help--feedback">Help &amp; Feedback</a></li>
 <li><a href="#examples">Examples</a></li>
 <li><a href="#roadmap">Roadmap</a></li>
 <li><a href="#contributing">Contributing</a></li>
 <li><a href="#license">License</a></li>
 </ul>
-</li>
-</ul>
 <h2 id="versioning"><a class="header" href="#versioning">Versioning</a></h2>
 <table><thead><tr><th>Levis Release</th><th>cdk8s Version</th><th>construct Version</th><th>log4js Version</th><th>minimist Version</th><th>yaml Version</th></tr></thead><tbody>
-<tr><td>1.0.14-alpha</td><td>0.30.0</td><td>3.0.14</td><td>6.3.0</td><td>1.2.5</td><td>2.0.0-6</td></tr>
+<tr><td>1.3.1-beta</td><td>0.30.0</td><td>3.0.14</td><td>6.3.0</td><td>1.2.5</td><td>2.0.0-6</td></tr>
 </tbody></table>
 <h2 id="demo"><a class="header" href="#demo">Demo</a></h2>
 <h2 id="getting-started"><a class="header" href="#getting-started">Getting Started</a></h2>
